fix: layout_alignParentTop/Left/Bottom/Right

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -65,6 +65,11 @@ body {
 
 
 
+/* Utilities */
+.absolute {
+	position: absolute;
+}
+
 /* ===== Styling for Android Layout XML ===== */
 
 .element-outlines-enabled .screen * {
